<resources>
    <string name="app_name">SkilliX</string>


    <!--INTRO PAGE-->
    <string name="intro_first_text">Hi, There! 👋</string>
    <string name="intro_second_text">Skillix connects Mentors with Mentees for learning and professional growth.</string>
    <string name="intro_third_text">GET START</string>
    <string name="intro_fourth_text">POWERED BY</string>
    <!--INTRO PAGE-->

    <!--SIGN IN PAGE-->


    <string name="signin_first_text">SIGN IN HERE.</string>
    <string name="signin_second_text">Welcome Back, Admin</string>
    <string name="signin_second_text_II">Admin</string>
    <string name="signin_third_text">jonedemini@gmail.com</string>
    <string name="signin_fourth_text">************</string>
    <string name="signin_fifth_text">Forgot password?</string>
    <string name="signin_sixth_text">Sign In</string>
    <string name="signin_seventh_text">or</string>
    <string name="signin_eighth_text">Don’t you have account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="mentor_dashboard_text">_</string>
    <string name="mentor_dashboard_text1">Mentee Count</string>
    <string name="mentor_dashboard_text2">Mentor Count</string>
    <string name="mentor_dashboard_text3">On Going</string>
    <string name="mentor_dashboard_text4">Revenue (LKR)</string>
    <string name="mentor_dashboard_text5">Subscription</string>
    <string name="mentor_dashboard_text6">Bronze Package</string>


    <string name="mentor_careers_types">Mentors\' Careers</string>
    <string name="mentee_careers_types">Mentees\' Careers</string>


    <string name="menu_slideshow_1">View Mentors</string>
    <string name="menu_slideshow_2">View Mentees</string>
    <string name="menu_slideshow_3">Subscription Plans</string>

    <string name="mentor_home">Find Mentors 🔍</string>
    <string name="mentee_home">Find Mentees 🔍</string>
    <string name="subscribed_mentor">Subscribed Mentor</string>


    <string name="mentor_purchasing_data">Mentor Subscription Details</string>
    <string name="mentor_purchasing_package_name">Subscription Name:</string>
    <string name="mentor_purchasing_date">Purchased Date:</string>
    <string name="mentor_expire_date">Expire Date:</string>
    <string name="mentor_subscription_description_price">Price:</string>
    <string name="mentor_subscription_description_txt">Description:</string>

    <string name="terms_and_condition">Terms &amp; Condition</string>






    <string name="menu_gallery">Gallery</string>
    <!--SIGN IN PAGE-->

    <!--SIGN UP PAGE-->
    <string name="signup_first_text">Register Account.</string>
    <string name="signup_second_text">Hello user, you have </string>
    <string name="signup_third_text">a greateful journey</string>
    <string name="signup_fourth_text">First Name</string>
    <string name="signup_fifth_text">Last Name</string>
    <string name="signup_sixth_text">Email</string>
    <string name="signup_seventh_text">Country</string>
    <string name="signup_eighth_text">Mobile</string>
    <string name="signup_ninth_text">Date of Birthday</string>
    <string name="signup_tenth_text">Career</string>
    <string name="signup_eleven_text">Gender</string>
    <string name="signup_twelve_text">Password</string>
    <string name="signup_thirteenth_text">Retype Password</string>
    <string name="signup_fourteenth_text">Sign Up</string>
    <string name="signup_fifteenth_text">Do you have Account?</string>
    <string name="signup_sixteenth_text">Sign In.</string>
    <!--SIGN UP PAGE-->

    <!--Mentee Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_user">My Account</string>
    <string name="menu_message">Message</string>
    <string name="menu_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_account_fragment">Hello account fragment</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_message_fragment">Hello message fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Mentee Navigation-->


    <!--Edit Profile-->
    <string name="hello_text1">Hello! 👋</string>
    <string name="hello_user_text">Welcome Admin!</string>
    <!--Edit Profile-->

    <!--Mentor Profile-->
    <string name="message_to_mentor">Message! ✉️</string>
    <string name="hire_mentor">Hire Me! ✅</string>
    <string name="mentor_about">ℹ️ About</string>
    <string name="mentor_about_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="mentor_career">💼 Career</string>
    <string name="mentor_career_type">Software Engineer</string>
    <string name="mentor_education">🎓 Education</string>
    <string name="mentor_education_points">⚫</string>
    <string name="mentor_degree">BSc (Hons) In Software Engineering from Birmingham City University</string>
    <string name="mentor_address">🏠︎ Address</string>
    <string name="mentor_country">📌 Country</string>
    <string name="mentor_certified_technology">💻 Certified Technology</string>
    <string name="mentor_feedbacks">📝 Feedbacks</string>

    <!--Mentee Profile-->
    <string name="mentor_profile">Add Image</string>
    <string name="mentor_profile_save">Save! </string>

    <!--Mentor Profile-->
    <string name="mentor_edit_profile_bio">Bio</string>
    <string name="mentor_edit_profile_location">Bio</string>
    <string name="mentor_edit_profile_add_location">Add Location</string>
    <string name="mentor_edit_profile_about">About</string>
    <string name="mentor_edit_profile_experience">Experience</string>
    <string name="mentor_edit_profile_education">Education Qualification</string>
    <string name="mentor_edit_profile_technology">Certified Technology (Ex: Java | Python / React | Flutter)</string>
    <string name="mentor_subscription_purchasing">Purchase Your Subscription.</string>


    <string name="mentor_select_subscription_option">Select the Best Option</string>

    <string name="mentor_subscription_month">One-Month Subscription</string>
    <string name="mentor_subscription_description">Full access to the platform for 60 days. 3 Free Consultation Sessions with mentees. Ability to manage up to 10 mentees at any given time. Advanced Analytics (Profile views, revenue generation, feedback summaries).</string>
    <string name="mentor_subscription_currency">Rs.</string>
    <string name="mentor_subscription_price">1000</string>
    <string name="mentor_subscription_fee_zero">.00</string>

    <string name="mentor_hire">Hire</string>
    <string name="mentor_hire_cancel">Cancel</string>

    <!--Mentor Services-->
    <string name="mentor_services_text1">Set Your Services.</string>
    <string name="mentor_services_text2">Enter Your Service Description.</string>
    <string name="mentor_services_text3">Rs. 5000 .00</string>
    <string name="mentor_services_text4">Add Service.</string>
    <string name="mentor_services_text5">Enter Your Service Details.</string>
    <string name="mentor_services_text6">🗑️ Delete. </string>
    <string name="mentor_services_text7">✏️ Edit.</string>
    <string name="mentor_services_text8">Add Time Duration (Month).</string>


    <!--Mentor Dashboard-->


</resources>