<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MentorServicesDialogFragment">

    <EditText
        android:id="@+id/servicePackageNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/plain_text"
        android:hint="Package Name"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <EditText
        android:id="@+id/serviceDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/plain_text"
        android:ems="10"
        android:hint="@string/mentor_services_text2"
        android:inputType="text|textMultiLine"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="95dp"
        app:layout_constraintEnd_toEndOf="@+id/servicePackageNameEditText"
        app:layout_constraintStart_toStartOf="@+id/servicePackageNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/getDurationText" />


    <EditText
        android:id="@+id/servicePriceEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/plain_text"
        android:ems="10"
        android:hint="@string/mentor_services_text3"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/serviceDescriptionEditText"
        app:layout_constraintStart_toStartOf="@+id/serviceDescriptionEditText"
        app:layout_constraintTop_toBottomOf="@+id/serviceDescriptionEditText" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/mentor_services_text5"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/mentor_services_text8"
        app:layout_constraintStart_toStartOf="@+id/servicePackageNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/servicePackageNameEditText" />

    <ImageView
        android:id="@+id/minusCountButtonImageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/minus"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/addCountButtonImageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/addcount"
        app:layout_constraintBottom_toBottomOf="@+id/getDurationText"
        app:layout_constraintStart_toEndOf="@+id/getDurationText"
        app:layout_constraintTop_toTopOf="@+id/getDurationText"
        app:layout_constraintVertical_bias="0.612" />

    <EditText
        android:id="@+id/getDurationText"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/plain_text"
        android:ems="10"
        android:hint="1"
        android:inputType="number|numberDecimal"
        android:padding="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/minusCountButtonImageView"
        app:layout_constraintStart_toEndOf="@+id/minusCountButtonImageView"
        app:layout_constraintTop_toTopOf="@+id/minusCountButtonImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>