<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeFragment" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/hello_text1"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mentorFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/hello_user_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <View
                android:id="@+id/view8"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/plain_text"
                android:backgroundTint="@color/color_purple"
                app:layout_constraintEnd_toStartOf="@+id/revenueView"
                app:layout_constraintStart_toStartOf="@+id/view11"
                app:layout_constraintTop_toBottomOf="@+id/view11" />

            <View
                android:id="@+id/revenueView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:background="@drawable/plain_text"
                android:backgroundTint="@color/color_green"
                app:layout_constraintBottom_toBottomOf="@+id/view8"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintStart_toEndOf="@+id/view8"
                app:layout_constraintTop_toTopOf="@+id/view8" />

            <View
                android:id="@+id/view10"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/plain_text"
                android:backgroundTint="@color/color_blue"
                app:layout_constraintBottom_toBottomOf="@+id/view11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view11"
                app:layout_constraintTop_toTopOf="@+id/view11"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view11"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/plain_text"
                android:backgroundTint="@color/color_accent"
                app:layout_constraintEnd_toStartOf="@+id/view10"
                app:layout_constraintStart_toStartOf="@+id/mentorFullName"
                app:layout_constraintTop_toBottomOf="@+id/mentorFullName" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/mentor_dashboard_text1"
                android:textColor="@color/color_off_white"
                app:layout_constraintEnd_toEndOf="@+id/view11"
                app:layout_constraintStart_toStartOf="@+id/view11"
                app:layout_constraintTop_toTopOf="@+id/view11" />

            <TextView
                android:id="@+id/menteeCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mentor_dashboard_text"
                android:textColor="@color/color_off_white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/view11"
                app:layout_constraintEnd_toEndOf="@+id/view11"
                app:layout_constraintStart_toStartOf="@+id/view11"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/mentor_dashboard_text2"
                android:textColor="@color/color_off_white"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/view10" />

            <TextView
                android:id="@+id/mentorCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mentor_dashboard_text"
                android:textColor="@color/color_off_white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/view10"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/mentor_dashboard_text3"
                android:textColor="@color/color_off_white"
                app:layout_constraintEnd_toEndOf="@+id/view8"
                app:layout_constraintStart_toStartOf="@+id/view8"
                app:layout_constraintTop_toTopOf="@+id/view8" />

            <TextView
                android:id="@+id/onGoingServiceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mentor_dashboard_text"
                android:textColor="@color/color_off_white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/view8"
                app:layout_constraintEnd_toEndOf="@+id/view8"
                app:layout_constraintStart_toStartOf="@+id/view8"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/mentor_dashboard_text4"
                android:textColor="@color/color_off_white"
                app:layout_constraintEnd_toEndOf="@+id/revenueView"
                app:layout_constraintStart_toStartOf="@+id/revenueView"
                app:layout_constraintTop_toTopOf="@+id/revenueView" />

            <TextView
                android:id="@+id/revenueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mentor_dashboard_text"
                android:textColor="@color/color_off_white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/revenueView"
                app:layout_constraintEnd_toEndOf="@+id/revenueView"
                app:layout_constraintStart_toStartOf="@+id/revenueView"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/line"
                app:layout_constraintEnd_toEndOf="@+id/revenueView"
                app:layout_constraintStart_toStartOf="@+id/view8"
                app:layout_constraintTop_toBottomOf="@+id/view8" />



            <!-- Content inside the scroll view -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mentor_careers_types"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/mentorCareerPieChart"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/mentee_careers_types"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/mentorCareerPieChart" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/menteerCareerPieChart"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/mentorCareerPieChart"
                app:layout_constraintStart_toStartOf="@+id/mentorCareerPieChart"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>